--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^4.0.0"
+    "@netlify/plugin-nextjs": "^4.0.0",
+    "@types/node": "^17.0.14",
+    "@types/react": "^17.0.39",
+    "typescript": "^4.5.5"
   }
 }
