--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@netlify/plugin-nextjs": "^4.0.0",
     "@types/node": "^17.0.14",
     "@types/react": "^17.0.39",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.18",
     "typescript": "^4.5.5"
   }
 }
