--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "export": "next export",
-    "lint": "next lint"
+    "lint": "eslint '{components,pages,utils,data,layouts}/**/*.{js,jsx,ts,tsx}'",
+    "lint:fix": "eslint --fix '{components,pages,utils,data,layouts}/**/*.{js,jsx,ts,tsx}'",
+    "format": "prettier --check \"{components,data,pages,styles,utils,layouts}/**/*.{js,jsx,ts,tsx,css,scss,json,yaml,md}\"",
+    "format:fix": "prettier --write \"{components,data,pages,styles,utils,layouts}/**/*.{js,jsx,ts,tsx,css,scss,json,yaml,md}\"",
+    "types:check": "tsc --pretty --noEmit",
+    "ci": "rm -rf node_modules && yarn install --frozen-lockfile"
   },
   "dependencies": {
     "next": "^12.0.7",
@@ -18,7 +23,13 @@
     "@types/node": "^17.0.14",
     "@types/react": "^17.0.39",
     "autoprefixer": "^10.4.2",
+    "eslint": "^8.8.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-next": "^12.0.10",
+    "eslint-config-prettier": "^8.3.0",
     "postcss": "^8.4.6",
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.5",
     "tailwindcss": "^3.0.18",
     "typescript": "^4.5.5"
   }
