--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "next": "^12.0.7",
+    "next-auth": "^4.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
