--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.0.1",
+    "mongodb": "^4.3.1",
     "next": "^12.0.7",
     "next-auth": "^4.2.1",
     "react": "^17.0.2",
