--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.0.1",
     "mongodb": "^4.3.1",
+    "mongoose": "^6.2.1",
     "next": "^12.0.7",
     "next-auth": "^4.2.1",
     "react": "^17.0.2",
