--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next": "^12.0.7",
     "next-auth": "^4.2.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.1.0",
