--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@headlessui/react": "^1.5.0",
     "@next-auth/mongodb-adapter": "^1.0.1",
+    "@radix-ui/react-dialog": "^0.1.5",
+    "classnames": "^2.3.1",
     "mongodb": "^4.3.1",
     "mongoose": "^6.2.1",
     "next": "^12.0.7",
