--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@headlessui/react": "^1.5.0",
     "@next-auth/mongodb-adapter": "^1.0.1",
     "@radix-ui/react-dialog": "^0.1.5",
+    "@tailwindcss/forms": "^0.4.0",
     "classnames": "^2.3.1",
+    "formik": "^2.2.9",
     "mongodb": "^4.3.1",
     "mongoose": "^6.2.1",
     "next": "^12.0.7",
@@ -33,6 +35,7 @@
     "@netlify/plugin-nextjs": "^4.0.0",
     "@types/node": "^17.0.14",
     "@types/react": "^17.0.39",
+    "@types/tailwindcss": "^3.0.8",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.8.0",
     "eslint-config-google": "^0.14.0",
