--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@next-auth/mongodb-adapter": "^1.0.1",
     "@radix-ui/react-dialog": "^0.1.5",
     "@tailwindcss/forms": "^0.4.0",
+    "axios": "^0.26.0",
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "mongodb": "^4.3.1",
@@ -28,6 +29,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "swr": "^1.2.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
