--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^6.2.1",
     "next": "^12.0.7",
     "next-auth": "^4.2.1",
+    "nextjs-progressbar": "^0.0.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
