--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
+    "react-json-view": "^1.21.3",
     "swr": "^1.2.2",
     "yup": "^0.32.11"
   },
