--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-json-view": "^1.21.3",
+    "react-twemoji": "^0.4.0",
     "swr": "^1.2.2",
     "yup": "^0.32.11"
   },
