--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/forms": "^0.4.0",
     "axios": "^0.26.0",
     "classnames": "^2.3.1",
+    "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "mongodb": "^4.3.1",
     "mongoose": "^6.2.1",
