--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "^12.0.7",
     "next-auth": "^4.2.1",
     "nextjs-progressbar": "^0.0.13",
+    "object-sizeof": "^1.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
