--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "axios": "^0.26.0",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
+    "firebase": "^9.6.7",
     "formik": "^2.2.9",
+    "localforage": "^1.10.0",
     "mongodb": "^4.3.1",
     "mongoose": "^6.2.1",
     "next": "^12.0.7",
