--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@headlessui/react": "^1.5.0",
     "@next-auth/mongodb-adapter": "^1.0.1",
+    "@radix-ui/react-accordion": "^0.1.6",
     "@radix-ui/react-dialog": "^0.1.5",
     "@tailwindcss/forms": "^0.4.0",
     "axios": "^0.26.0",
@@ -39,6 +40,7 @@
     "react-json-view": "^1.21.3",
     "react-twemoji": "^0.4.0",
     "swr": "^1.2.2",
+    "tailwindcss-radix": "^1.6.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
