--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@headlessui/react": "^1.5.0",
     "@next-auth/mongodb-adapter": "^1.0.1",
+    "@next/bundle-analyzer": "^12.1.0",
     "@radix-ui/react-accordion": "^0.1.6",
     "@radix-ui/react-dialog": "^0.1.5",
     "@tailwindcss/forms": "^0.4.0",
