--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^6.2.1",
     "next": "^12.0.7",
     "next-auth": "^4.2.1",
+    "next-seo": "^5.1.0",
     "nextjs-progressbar": "^0.0.13",
     "object-sizeof": "^1.6.3",
     "react": "^17.0.2",
